533 - Add some macros to make RTTI implementation easier Done.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
@@ -151,6 +151,9 @@
 		<Unit filename="../../../../headers/QObject.h">
 			<Option virtualFolder="Core/" />
 		</Unit>
+		<Unit filename="../../../../headers/RTTIDefinitions.h">
+			<Option virtualFolder="Core/" />
+		</Unit>
 		<Unit filename="../../../../headers/SystemDefinitions.h" />
 		<Unit filename="../../../../source/QObject.cpp">
 			<Option virtualFolder="Core/" />
