--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math\;Containers\;Time\;" />
+		<Option virtualFolders="Math/;Containers/;Time/;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -52,7 +52,7 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
 					<Add library="libicuin.dll.a" />
@@ -77,9 +77,9 @@
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add library="icudt" />
+					<Add library="icudata" />
 					<Add library="icuuc" />
-					<Add library="icuin" />
+					<Add library="icui18n" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtDynamic" />
 				</Linker>
 			</Target>
@@ -119,7 +119,7 @@
 				<Linker>
 					<Add option="-m32" />
 					<Add option="-v" />
-					<Add library="..\..\..\..\bin\CodeBlocks10\DebugMac32SharedrtDynamic\libQuimeraEngineCommon.so" />
+					<Add library="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic/libQuimeraEngineCommon.so" />
 					<Add library="icudt" />
 					<Add library="icuuc" />
 					<Add library="icuin" />
