--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -5,37 +5,8 @@
 		<Option title="Common" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Tests\;Tests\DataTypes\;Tests\General\;Tests\Memory\;TestSystem (shared)\;" />
+		<Option virtualFolders="Tests/;Tests/DataTypes/;Tests/General/;Tests/Memory/;TestSystem (shared)/;" />
 		<Build>
-			<Target title="DebugLinux32SharedrtStatic">
-				<Option platforms="Unix;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/Unit_TestModule_Common" prefix_auto="0" extension_auto="1" />
-				<Option working_dir="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add option="-m32" />
-					<Add option="-D_DEBUG" />
-					<Add directory="../../../../tests/unit/testmodule_tools" />
-				</Compiler>
-				<Linker>
-					<Add option="-m32" />
-					<Add library="libQuimeraEngineCommon.a" />
-					<Add library="libboost_unit_test_framework-mt-d.a" />
-					<Add library="icudata" />
-					<Add library="icuuc" />
-					<Add library="icuin" />
-					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
-					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
-					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
-				</Linker>
-				<ExtraCommands>
-					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
-					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
-				</ExtraCommands>
-			</Target>
 			<Target title="DebugWin32SharedrtStatic">
 				<Option platforms="Windows;" />
 				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/Unit_TestModule_Common" prefix_auto="0" extension_auto="1" />
@@ -49,7 +20,7 @@
 					<Add option="-DU_STATIC_IMPLEMENTATION" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCommon.lib" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
@@ -79,7 +50,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="libboost_unit_test_framework-mt-d.a" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
 					<Add library="libicuin.dll.a" />
@@ -92,6 +63,35 @@
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\bin\CodeBlocks10\$(TARGET_NAME)\QuimeraEngineCommon.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
 					<Mode after="always" />
+				</ExtraCommands>
+			</Target>
+			<Target title="DebugLinux32SharedrtStatic">
+				<Option platforms="Unix;" />
+				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/Unit_TestModule_Common" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-D_DEBUG" />
+					<Add directory="../../../../tests/unit/testmodule_tools" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add library="libQuimeraEngineCommon.a" />
+					<Add library="libboost_unit_test_framework-mt-d.a" />
+					<Add library="icudata" />
+					<Add library="icuuc" />
+					<Add library="icui18n" />
+					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
+					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
+					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				</Linker>
+				<ExtraCommands>
+					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../NormalizationTest.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 				</ExtraCommands>
 			</Target>
 			<Target title="DebugLinux32SharedrtDynamic">
@@ -114,7 +114,7 @@
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="icudata" />
 					<Add library="icuuc" />
-					<Add library="icuin" />
+					<Add library="icui18n" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtDynamic" />
 				</Linker>
