--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -45,6 +45,14 @@
     <File Name="../../../../headers/RTTIDefinitions.h"/>
     <File Name="../../../../source/QObject.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="DebugWin32SharedrtStatic">
+    <Project Name="Common"/>
+    <Project Name="Tools"/>
+  </Dependencies>
+  <Dependencies Name="DebugWin32SharedrtDynamic">
+    <Project Name="Common"/>
+    <Project Name="Tools"/>
+  </Dependencies>
   <Settings Type="Static Library">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -56,7 +64,7 @@
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="DebugWin32SharedrtDynamic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g -m32" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../headers"/>
         <IncludePath Value="../../../../3rdparty/ICU/include"/>
         <IncludePath Value="../../../../3rdparty/Boost/include"/>
@@ -65,7 +73,7 @@
         <Preprocessor Value="QE_PREPROCESSOR_IMPORTLIB_TOOLS"/>
         <Preprocessor Value="QE_PREPROCESSOR_IMPORTLIB_COMMON"/>
       </Compiler>
-      <Linker Options="" Required="yes">
+      <Linker Options="-m32" Required="yes">
         <LibraryPath Value="../../../../3rdparty/ICU/bin/Win32/ReleaseSharedrtDynamic/MinGW"/>
         <LibraryPath Value="../../../../bin/MinGW/$(ConfigurationName)"/>
         <Library Value="icudt"/>
@@ -108,13 +116,13 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugWin32SharedrtStatic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Static Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g -m32" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../headers"/>
         <IncludePath Value="../../../../3rdparty/ICU/include"/>
         <IncludePath Value="../../../../3rdparty/Boost/include"/>
         <Preprocessor Value="_DEBUG"/>
       </Compiler>
-      <Linker Options="" Required="yes"/>
+      <Linker Options="-m32" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="../../../../bin/MinGW/$(ConfigurationName)/libQuimeraEngine$(ProjectName).a" IntermediateDirectory="../../../../garbage/MinGW/$(ConfigurationName)" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="../../../../bin/MinGW/$(ConfigurationName)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
@@ -149,12 +157,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <Dependencies Name="DebugWin32SharedrtStatic">
-    <Project Name="Common"/>
-    <Project Name="Tools"/>
-  </Dependencies>
-  <Dependencies Name="DebugWin32SharedrtDynamic">
-    <Project Name="Common"/>
-    <Project Name="Tools"/>
-  </Dependencies>
 </CodeLite_Project>
